# proto-chango

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
src/proto_chango/: models.proto  models.py  models_pb2.py  proto.py
tests/: __init__.py  test_models.py  test_proto.py
